--- a/app/assets/stylesheets/variants.scss
+++ b/app/assets/stylesheets/variants.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the variants controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.reel img {
+  width: 400px !important;
+  height: auto !important;
+}
